classDiagram
    Organizacion --o Obra : "1..*"
    Organizacion --o Transporte : "1..*"
    Obra *-- Direccion : "1"
    Obra --o DetalleObraTransporte : "1..*"
    Obra --o DetalleObraUsuario : "1..*"
    Obra --o Pedido : "1..*"
    Obra --o Oferta : "1..*"
    Obra --o Stock : "1..*"
    Obra --o DetalleObraPedido : "1..*"

    TipoUsuario --o DetalleObraUsuario : "1..*"
    TipoDocumento --o CustomUsuario : "1"
    CustomUsuario *-- Direccion : "1"
    CustomUsuario --o DetalleObraUsuario : "1..*"
    CustomUsuario --o Pedido : "1..*"
    CustomUsuario --o Oferta : "1..*"
    CustomUsuario --o DetalleStockProducto : "1..*"
    CustomUsuario --o Notificacion : "1..*"

    Categoria --o Producto : "1..*"
    Producto --o DetalleStockProducto : "1..*"
    Producto --o Pedido : "1..*"
    Producto --o Oferta : "1..*"
    Stock --o DetalleStockProducto : "1..*"
    Stock --o DetalleObraPedido : "1..*"

    EstadoPedido --o Pedido : "1..*"
    EstadoOferta --o Oferta : "1..*"
    Pedido --o AportePedido : "1..*"
    Oferta --o AporteOferta : "1..*"
    Pedido --o DetalleObraPedido : "1..*"

    class Direccion {
        - int id_direccion
        - varchar calle
        - int numero
        - varchar localidad
        
        +setCalle()
        +setNumero()
        +setLocalidad()

        +getCalle()
        +getNumero()
        +getLocalidad()
    }
    class Organizacion {
        - int id_Organizacion
        - varchar nombre
        - varchar descripcion
        - varchar telefono
        - varchar email

        +setNombre()
        +setDescripcion()
        +setTelefono()
        +setEmail()

        +getNombre()
        +getDescripcion()
        +getTelefono()
        +getEmail()
    }
    class TipoDocumento {
        - int id_tipoDocumento
        - varchar nombre
        - varchar abreviacion
        - varchar descripcion

        +setNombre()
        +setAbreviacion()
        +setDescripcion()

        +getNombre()
        +getAbreviacion()
        +getDescripcion()
    }
    class TipoUsuario {
        - int id_tipoUsuario
        - varchar nombre
        - varchar descripcion

        +setNombre()
        +setDescripcion()

        +getNombre()
        +getDescripcion()
    }
    class CustomUsuario {
        - int id_usuario
        - varchar nombre
        - varchar apellido
        - varchar nombreusuario
        - varchar password   
        - varchar documento
        - varchar telefono
        - varchar email
        - int genero
        - varchar imagen
        - datetime fechaUnion
        - datetime last_login
        - boolean is_staff
        - boolean is_superuser
        - boolean is_active
        - boolean is_verified
        - int id_direccion
        - int id_tipoDocumento

        +setNombre()
        +setApellido()
        +setNombreUsuario()
        +setPassword()
        +setDocumento()
        +setTelefono()
        +setEmail()
        +setGenero()
        +setImagen()
        +setFechaUnion()
        +setLastLogin()
        +setIsStaff()
        +setIsSuperuser()
        +setIsActive()
        +setIsVerified()
        +setDireccion()
        +setTipoDocumento()

        +getNombre()
        +getApellido()
        +getNombreUsuario()
        +getPassword()
        +getDocumento()
        +getTelefono()
        +getEmail()
        +getGenero()
        +getImagen()
        +getFechaUnion()
        +getLastLogin()
        +getIsStaff()
        +getIsSuperuser()
        +getIsActive()
        +getIsVerified()
        +getDireccion()
        +getTipoDocumento()
    }
    class Obra {
        - int id_obra
        - varchar nombre
        - varchar descripcion
        - varchar imagen
        - int id_Organizacion
        - int id_direccion

        +setNombre()
        +setDescripcion()
        +setImagen()
        +setOrganizacion()
        +setDireccion()

        +getNombre()
        +getDescripcion()
        +getImagen()
        +getOrganizacion()
        +getDireccion()
    }
    class DetalleObraUsuario {      
        - int id_detalleObraUsuario
        - varchar descripcion
        - date fechaIngreso
        - int id_obra
        - int id_usuario
        - int id_tipoUsuario

        +setDescripcion()
        +setFechaIngreso()
        +setObra()
        +setUsuario()
        +setTipoUsuario()

        +getDescripcion()
        +getFechaIngreso()
        +getObra()
        +getUsuario()
        +getTipoUsuario()
    }
    class Stock {
        - int id_stock
        - int id_obra

        +setCantidad()
        +setObra()

        +getCantidad()
        +getObra()
    }
    class Categoria {
        - int id_categoria
        - varchar nombre
        - varchar descripcion

        +setNombre()
        +setDescripcion()

        +getNombre()
        +getDescripcion()
    } 
    class Producto {
        - int id_producto
        - varchar nombre
        - varchar descripcion
        - int id_categoria
        - int unidadMedida
        - varchar talle
        - int cantidad_por_unidad
        - varchar imagen
        - boolean perecedero
        - boolean tiene_talle
        - boolean enlatado
        - boolean requiere_refrigeracion
        - boolean sin_TAC
        - boolean sin_azucares

        +setNombre()
        +setDescripcion()
        +setCategoria()
        +setUnidadMedida()
        +setTalle()
        +setCantidadPorUnidad()
        +setImagen()
        +setPerecedero()
        +setTieneTalle()
        +setEnlatado()
        +setRequiereRefrigeracion()
        +setSinTAC()
        +setSinAzucares()

        +getNombre()
        +getDescripcion()
        +getCategoria()
        +getUnidadMedida()
        +getTalle()
        +getCantidadPorUnidad()
        +getImagen()
        +getPerecedero()
        +getTieneTalle()
        +getEnlatado()
        +getRequiereRefrigeracion()
        +getSinTAC()
        +getSinAzucares()
    }
    class DetalleStockProducto {
        - int id_detalleStockProducto
        - float cantidad
        - boolean checkpoint
        - datetime fecha_creacion
        - int id_stock
        - int id_producto
        - int id_usuario

        +setCantidad()
        +setCheckpoint()
        +setFechaCreacion()
        +setStock()
        +setProducto()
        +setUsuario()

        +getCantidad()
        +getCheckpoint()
        +getFechaCreacion()
        +getStock()
        +getProducto()
        +getUsuario()
    }
    class EstadoPedido {
        - int id_estadoPedido
        - varchar nombre
        - varchar descripcion

        +setNombre()
        +setDescripcion()

        +getNombre()
        +getDescripcion()
    }
    class Pedido {
        - int id_pedido
        - date fechaInicio
        - date fechaVencimiento
        - int cantidad
        - int urgente
        - int id_obra
        - int id_usuario
        - int id_producto
        - int id_estadoPedido

        +setFechaInicio()
        +setFechaVencimiento()
        +setCantidad()
        +setUrgente()
        +setObra()
        +setUsuario()
        +setProducto()
        +setEstadoPedido()

        +getFechaInicio()
        +getFechaVencimiento()
        +getCantidad()
        +getUrgente()
        +getObra()
        +getUsuario()
        +getProducto()
        +getEstadoPedido()
    }
    class AportePedido {
        - int id_aportePedido
        - varchar descripcion
        - int cantidad
        - int id_pedido

        +setDescripcion()
        +setCantidad()
        +setPedido()

        +getDescripcion()
        +getCantidad()
        +getPedido()
    }
    class EstadoOferta {
        - int id_estadoOferta
        - varchar nombre
        - varchar descripcion

        +setNombre()
        +setDescripcion()

        +getNombre()
        +getDescripcion()
    }
    class Oferta {
        - int id_oferta
        - date fechaInicio
        - date fechaVencimiento
        - int cantidad
        - int id_usuario
        - int id_obra
        - int id_producto
        - int id_estadoOferta

        +setFechaInicio()
        +setFechaVencimiento()
        +setCantidad()
        +setUsuario()
        +setObra()
        +setProducto()
        +setEstadoOferta()

        +getFechaInicio()
        +getFechaVencimiento()
        +getCantidad()
        +getUsuario()
        +getObra()
        +getProducto()
        +getEstadoOferta()
    }
    class AporteOferta {
        - int id_aporteOferta
        - varchar descripcion
        - int cantidad
        - int id_oferta

        +setDescripcion()
        +setCantidad()
        +setOferta()

        +getDescripcion()
        +getCantidad()
        +getOferta()
    }
    class Transporte {
        - int id_transporte
        - varchar marca
        - varchar modelo
        - varchar patente
        - int kilometraje
        - varchar estadoITV
        - year anio
        - varchar imagen
        - boolean necesita_mantenimiento
        - varchar descripcion_mantenimiento

        +setMarca()
        +setModelo()
        +setPatente()
        +setKilometraje()
        +setEstadoITV()
        +setAnio()
        +setImagen()
        +setNecesitaMantenimiento()
        +setDescripcionMantenimiento()

        +getMarca()
        +getModelo()
        +getPatente()
        +getKilometraje()
        +getEstadoITV()
        +getAnio()
        +getImagen()
        +getNecesitaMantenimiento()
        +getDescripcionMantenimiento()
    }
    class DetalleObraTransporte {
        - int id_detalleObraTransporte
        - int id_obra
        - int id_transporte

        +setObra()
        +setTransporte()

        +getObra()
        +getTransporte()
    }
    class DetalleObraPedido {
        - int id_DetalleObraPedido
        - int id_stock
        - int id_pedido

        +setStock()
        +setPedido()

        +getStock()
        +getPedido()
    }
    class Notificacion {
        - int id_notificacion
        - varchar titulo
        - varchar descripcion
        - tinyint viewed
        - datetime fecha_creacion
        - int id_usuario

        +setTitulo()
        +setDescripcion()
        +setViewed()
        +setFechaCreacion()
        +setUsuario()

        +getTitulo()
        +getDescripcion()
        +getViewed()
        +getFechaCreacion()
        +getUsuario()
    }